# misc-tools

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  conanfile.txt
application/: frontend.yaml  image-transformer.yaml  ingress.yaml  nfo-editor.yaml
dockerfiles/: Dockerfile  build-and-push.fish  frontend.Dockerfile
frontend/: eslint.config.mjs  next.config.ts  package.json  pnpm-lock.yaml
frontend/src/app/: page.tsx
frontend/src/app/imageTransformer/: page.client.tsx  page.tsx
frontend/src/app/nfoEditor/: page.client.tsx  page.tsx
frontend/src/app/oaRelay/: page.client.tsx  page.module.css  page.tsx
frontend/src/app/oaRelay/login/: page.client.tsx  page.tsx
frontend/src/components/: ListInput.tsx  SuggestionInput.tsx
src/: CMakeLists.txt
src/add-to-set/: CMakeLists.txt  main.cpp
src/image-renamer/: CMakeLists.txt  image-renamer.cpp
src/image-transformer/: CMakeLists.txt  ImageTransformer.cpp  ImageTransformer.qml  ImageTransformerController.cpp  ImageTransformerController.hpp  ImageTransformerQtBridge.cpp  ImageTransformerQtBridge.hpp
src/image-transformer/dto/: ImageTransformerConvertImageResponse.hpp
src/image-transformer/qml/: ImageTransformer.qml
src/liblunacd-qml/: CMakeLists.txt  LunacdQmlAutocomplete.cpp  LunacdQmlAutocomplete.hpp
src/liblunacd-qml/qml/: LunacdLabeledInput.qml  LunacdSuggestionBox.qml  LunacdSuggestionItem.qml  LunacdSuggestionPanel.qml
src/libui/: CMakeLists.txt  LunacdAutocomplete.cpp  LunacdLabeledInput.qml  LunacdSuggestionBox.qml  LunacdSuggestionPanel.qml
src/libui/Lunacd/: CMakeLists.txt  LunacdAutocomplete.cpp  LunacdAutocomplete.hpp  LunacdButton.qml  LunacdSuggestionBox.qml  LunacdSuggestionItem.qml
src/libutil/: CMakeLists.txt  Util.cppm  UtilExpiringResource.cpp  UtilExpiringResource.hpp  UtilFilesystem.cpp  UtilFilesystem.hpp  UtilOat.cpp  UtilOat.hpp  UtilStr.cpp  UtilStr.cppm  UtilStr.hpp  UtilSys.cpp  UtilSys.cppm  UtilSys.hpp
src/nfo-editor/: CMakeLists.txt  NfoEditor.cpp  NfoEditor.qml  NfoEditorAppComponents.cpp  NfoEditorAppComponents.hpp  NfoEditorAutocomplete.cpp  NfoEditorAutocomplete.cppm  NfoEditorAutocomplete.hpp  NfoEditorController.cpp  NfoEditorController.hpp  NfoEditorDatabaseClient.cpp  NfoEditorDatabaseClient.hpp  NfoEditorDtos.cpp  NfoEditorDtos.hpp  NfoEditorExpiringMap.cpp  NfoEditorExpiringMap.hpp  NfoEditorInterface.cppm  NfoEditorLabeledListInput.qml  NfoEditorQtBridge.cpp  NfoEditorQtBridge.hpp  NfoEditorRemovableItem.qml  NfoEditorScrapeAutocomplete.cpp  NfoEditorScrapeAutocomplete.hpp  NfoEditorStaticController.cpp  NfoEditorStaticController.hpp  NfoEditorXml.cpp  NfoEditorXml.cppm  NfoEditorXml.hpp  db.sql
src/nfo-editor/dto/: NfoEditorAutocompleteResponse.hpp  NfoEditorSaveToNfoRequest.hpp  NfoEditorSaveToNfoResponse.hpp
src/nfo-editor/qml/: LabeledListInput.qml  NfoEditor.qml  SuggestionBox.qml
src/oa-relay/: CMakeLists.txt  OaRelay.cpp  OaRelayApiClient.cpp  OaRelayApiClient.hpp  OaRelayAppComponents.cpp  OaRelayAppComponents.hpp  OaRelayController.cpp  OaRelayController.hpp  OaRelayDTOs.hpp  OaRelayDatabaseClient.cpp  OaRelayDatabaseClient.hpp  OaRelaySseScanner.cpp  OaRelaySseScanner.hpp  db.sql
src/oa-relay/auth/: OaRelayAuthHandler.cpp  OaRelayAuthHandler.hpp  OaRelayJwt.cpp  OaRelayJwt.hpp
src/oa-relay/dto/: OaRelayCompletionsMessage.hpp  OaRelayCompletionsRequest.hpp  OaRelayOaCompletionsRequest.hpp
src/oa-relay/interceptor/: OaRelayAuthInterceptor.cpp  OaRelayAuthInterceptor.hpp
src/scrape-autocomplete/: CMakeLists.txt  ScrapeAutocomplete.cpp  scrapeAutocomplete.cpp  scrapeAutocomplete.cppm
src/util/: CMakeLists.txt  PathUtil.cpp  PathUtil.hpp  StrUtil.cpp  StrUtil.cppm  StrUtil.hpp  SysUtil.cpp  SysUtil.cppm  SysUtil.hpp
tests/: CMakeLists.txt
tests/libutil/: CMakeLists.txt  UtilFilesystem.t.cpp  UtilStr.t.cpp
